kubernetes/version-checker/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: version-checker
  namespace: version-checker
  labels:
    app: version-checker
    app.kubernetes.io/instance: version-checker
spec:
  selector:
    app: version-checker
  ports:
    - protocol: TCP
      name: web
      port: 8080
      targetPort: http
